array.island.Island.scala.error
Compilation error:
Island:3: error: pattern type is incompatible with expected type;
 found   : scala.collection.immutable.Nil.type
 required: plm.runtime20.Island
  case Nil => 0
       ^Island:4: error: constructor cannot be instantiated to expected type;
 found   : scala.collection.immutable.::[B]
 required: plm.runtime20.Island
  case x :: xs => 1 + xs.length
         ^Island:9: error: Int does not take parameters
  var l = length(num)
                ^